--- a/views/game.ejs
+++ b/views/game.ejs
@@ -20,6 +20,8 @@
 
     <link rel="stylesheet" type="text/css" href="addtohomescreen.css">
     <script src="js/addtohomescreen.min.js"></script>
+    <script src="js/underscore-min.js"></script>
+    <script src="js/github.js"></script>
   </head>
 
   <body>
@@ -55,8 +57,8 @@
         }
       });
 
-      console.log("<%= githubAccessToken %>");
+      window.githubAccessToken = "<%= githubAccessToken %>";
     </script>
-
+    <script type="text/javascript" src="js/app.js" ></script>
   </body>
 </html>
