--- a/views/game.ejs
+++ b/views/game.ejs
@@ -30,7 +30,13 @@
     
     <!-- melonJS Library -->
     <script type="text/javascript" src="//cdn.jsdelivr.net/melonjs/2.0.2/melonJS.js"></script>
-    <script type="text/javascript" src="build/clumsy-min.js" ></script>
+    <script type="text/javascript" src="js/game.js" ></script>
+    <script type="text/javascript" src="js/resources.js" ></script>
+    <script type="text/javascript" src="js/entities/entities.js" ></script>
+    <script type="text/javascript" src="js/entities/HUD.js" ></script>
+    <script type="text/javascript" src="js/screens/title.js" ></script>
+    <script type="text/javascript" src="js/screens/play.js" ></script>
+    <script type="text/javascript" src="js/screens/gameover.js" ></script>
     <!-- Bootstrap & Mobile optimization tricks -->
     <script type="text/javascript">
       window.onReady(function onReady() {
