fix: ends loading screen when issues are loaded
closes #8

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -30,6 +30,7 @@
     
     <!-- melonJS Library -->
     <script type="text/javascript" src="//cdn.jsdelivr.net/melonjs/2.0.2/melonJS.js"></script>
+    <script type="text/javascript" src="js/events.js" ></script>
     <script type="text/javascript" src="js/game.js" ></script>
     <script type="text/javascript" src="js/resources.js" ></script>
     <script type="text/javascript" src="js/entities/entities.js" ></script>
